cabal-version: 2.2
name:
  knuckles
version:
  0.1
synopsis:
  generate typeclass test suites using hedgehog-classes and ghc-api
description:
  generate typeclass test suites using hedgehog-classes and ghc-api
homepage:
  https://github.com/chessai/knuckles
bug-reports:
  https://github.com/chessai/knuckles/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data,Testing,Development,Application
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.4

library
  hs-source-dirs:
    src
  exposed-modules:
    Knuckles
    Knuckles.Monad
  build-depends:
    , base >= 4.10.1 && < 4.13
    , containers >= 0.5 && < 0.7
    , ghc
    , bimap
    , ghc-paths
    , ghc-boot-th
    , ghc-source-gen
    , directory
    , filepath
    , Cabal
    , mtl
    , optparse-applicative
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

executable knuckles
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , base >= 4.10.1 && < 4.13
    , knuckles
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/knuckles.git
